[gd_scene load_steps=7 format=3 uid="uid://dbj27u16816l5"]

[ext_resource type="Script" path="res://src/gui/displaying_notes/note_display/note_display.gd" id="1_7u0ca"]
[ext_resource type="PackedScene" uid="uid://dpoekypmevp47" path="res://src/gui/user_input/editable_rich_text_label.tscn" id="1_dbt0l"]
[ext_resource type="PackedScene" uid="uid://c7yar8fvf8ne2" path="res://src/gui/displaying_notes/note_display/note_display_button.tscn" id="2_od70a"]
[ext_resource type="Texture2D" uid="uid://cn1dolctmjaya" path="res://src/assets/images/icons/grab.png" id="2_vo56a"]
[ext_resource type="Texture2D" uid="uid://dljq5rng8ew0b" path="res://src/assets/images/icons/delete.png" id="4_btt4o"]
[ext_resource type="PackedScene" uid="uid://b5oyco6trga1y" path="res://src/gui/user_input/grip/grip_component.tscn" id="4_e0p82"]

[node name="NoteDisplay" type="PanelContainer"]
offset_right = 84.0
offset_bottom = 23.0
size_flags_vertical = 4
script = ExtResource("1_7u0ca")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Grip" parent="HBoxContainer" instance=ExtResource("2_od70a")]
layout_mode = 2
texture_normal = ExtResource("2_vo56a")

[node name="GripComponent" parent="HBoxContainer/Grip" node_paths=PackedStringArray("element_to_move") instance=ExtResource("4_e0p82")]
layout_mode = 1
element_to_move = NodePath("../../..")

[node name="Title" parent="HBoxContainer" instance=ExtResource("1_dbt0l")]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
fit_content = true
multiline = false

[node name="Delete" parent="HBoxContainer" instance=ExtResource("2_od70a")]
layout_mode = 2
texture_normal = ExtResource("4_btt4o")

[connection signal="button_down" from="HBoxContainer/Grip" to="HBoxContainer/Grip/GripComponent" method="start_dragging"]
[connection signal="button_up" from="HBoxContainer/Grip" to="HBoxContainer/Grip/GripComponent" method="finish_dragging"]
[connection signal="text_changed" from="HBoxContainer/Title" to="." method="_on_title_text_changed"]
[connection signal="pressed" from="HBoxContainer/Delete" to="." method="_on_delete_pressed"]
